--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ejemplo",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
